# cloud-very-native-demo

./: .gitignore  README.md  app-project.yaml  application.yaml  project.yaml  repository.yaml
base-images/xtime/: Containerfile
deployment/: Chart.yaml  values.yaml
deployment/templates/: base-buildtime.yaml  base-commontime.yaml  base-runtime.yaml  builds.yaml  eventlisteners.yaml  imagestreams.yaml  pipelines.yaml  rolebindings.yaml  roles.yaml  routes.yaml  serviceaccounts.yaml  tasks.yaml  triggertemplates.yaml
development/: CMakeLists.txt  Containerfile
development/headers/core/: plugins.hpp
development/headers/plugins/: p1.hpp  p2.hpp
development/sources/core/: main.cpp
development/sources/plugins/: p1.cpp  p2.cpp
images/application-compilation/: Containerfile
images/common/: Containerfile
images/compilation/: Containerfile
images/execution/: Containerfile
images/openshift-client/: Containerfile
