CMAKE_MINIMUM_REQUIRED(VERSION 3.26)

SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

PROJECT(CVND VERSION 1.0.0 LANGUAGES CXX)

FIND_PACKAGE(Boost CONFIG REQUIRED COMPONENTS chrono date_time filesystem thread)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} headers)

ADD_EXECUTABLE(cvnd sources/core/main.cpp)

TARGET_LINK_LIBRARIES(cvnd ${Boost_LIBRARIES})

ADD_LIBRARY(p1 SHARED sources/plugins/p1.cpp)

ADD_LIBRARY(p2 SHARED sources/plugins/p2.cpp)
